# roman-sunclock

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: azure-static-web-apps-polite-pond-04cb50f03.yml
src/: angle_calculator.rs  celestial_calculations.rs  lib.rs  main.rs  sun_calculator.rs  sun_time_calculator.rs  svg_clock_generator.rs  time_calculators.rs  types.rs  wasm_types.rs
src/celestial_calculations/: earth.rs  julian_time.rs  moon.rs  moon_constants.rs  rise_set.rs  sun.rs  utils.rs
src/sun_calculator/: julian_converters.rs
src/sun_time_calculator/: time_calculators.rs
src/svg_clock_generator/: angle_calculator.rs  base_clock_generator.rs  constants.rs  day_night_icon_generator.rs  point_utils.rs  roman_clock_generator.rs
www/: bootstrap.ts  global.d.ts  index.html  index.js  index.ts  package-lock.json  package.json  readme.md  roman-clock.css  roman-sunclock.css  vite.config.js  vite.config.ts  webpack.config.js
www/src/: converters.ts  location-name.ts  location.ts  svg-generator.ts  time.ts  types.ts  utils.ts
