[package]
name = "roman-sunclock"
description = "Roman Sunclock Time - special timezone based on local daylight"
repository = "https://github.com/lsolova/roman-sun-clock"
version = "0.5.1"
authors = ["Laszlo Solova <laszlo@solova.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.38"
svg = "0.18.0"
wasm-bindgen = "0.2.97"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"

[profile.release]
opt-level = "s"
